# ralph

./: .dockerignore  .env.dist  .gitignore  .gitlint  .k3d-cluster.env.sh  .pylintrc  404.html  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  UPGRADE.md  arnold.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  renovate.json  setup.cfg  sitemap.xml  versions.json
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Support_question.md
2.0/: 404.html  index.html  objects.inv  sitemap.xml
2.0/CHANGELOG/: index.html
2.0/LICENSE/: index.html
2.0/backends/: index.html
2.0/commands/: index.html
2.0/contribute/: index.html
2.0/models/: index.html
2.0/search/: search_index.json
2.1/: 404.html  index.html  objects.inv
2.1/CHANGELOG/: index.html
2.1/api/: index.html
2.1/backends/: index.html
2.1/commands/: index.html
2.1/contribute/: index.html
2.1/search/: search_index.json
3.0/: index.html  objects.inv  sitemap.xml
3.0/CHANGELOG/: index.html
3.0/commands/: index.html
3.0/contribute/: index.html
3.0/models/: index.html
3.0/search/: search_index.json
3.1/: index.html  objects.inv  sitemap.xml
3.1/CHANGELOG/: index.html
3.1/LICENSE/: index.html
3.1/api/: index.html
3.1/backends/: index.html
3.1/search/: search_index.json
3.2/: index.html  objects.inv
3.2/CHANGELOG/: index.html
3.2/api/: index.html
3.2/backends/: index.html
3.2/commands/: index.html
3.2/search/: search_index.json
3.3/: 404.html  index.html
3.3/CHANGELOG/: index.html
3.3/LICENSE/: index.html
3.3/api/: index.html
3.3/backends/: index.html
3.3/commands/: index.html
3.3/contribute/: index.html
3.3/models/: index.html
3.3/search/: search_index.json
3.4/: index.html  objects.inv  sitemap.xml
3.4/CHANGELOG/: index.html
3.4/api/: index.html
3.4/backends/: index.html
3.4/commands/: index.html
3.4/search/: search_index.json
3.5/CHANGELOG/: index.html
3.5/backends/: index.html
3.5/commands/: index.html
3.5/models/: index.html
3.5/search/: search_index.json
3.6/CHANGELOG/: index.html
3.6/api/: index.html
3.6/search/: search_index.json
3.7/: objects.inv
3.7/CHANGELOG/: index.html
3.7/api/: index.html
3.7/commands/: index.html
3.7/contribute/: index.html
3.7/search/: search_index.json
3.8/: index.html
3.8/CHANGELOG/: index.html
3.8/backends/: index.html
3.8/commands/: index.html
3.8/search/: search_index.json
3.9/: 404.html  objects.inv
3.9/CHANGELOG/: index.html
3.9/LICENSE/: index.html
3.9/backends/: index.html
3.9/commands/: index.html
3.9/search/: search_index.json
4.0/: 404.html  index.html  sitemap.xml
4.0/CHANGELOG/: index.html
4.0/contribute/: index.html
4.0/search/: search_index.json
4.1/: 404.html  index.html  sitemap.xml
4.1/CHANGELOG/: index.html
4.1/UPGRADE/: index.html
4.1/commands/: index.html
4.1/contribute/: index.html
4.1/search/: search_index.json
4.2/: index.html  sitemap.xml
4.2/LICENSE/: index.html
4.2/UPGRADE/: index.html
4.2/commands/: index.html
4.2/search/: search_index.json
5.0/: 404.html  index.html  objects.inv  sitemap.xml
5.0/CHANGELOG/: index.html
5.0/LICENSE/: index.html
5.0/UPGRADE/: index.html
5.0/commands/: index.html
5.0/contribute/: index.html
5.0/search/: search_index.json
5.0/theme/: announce.html
CHANGELOG/: index.html
LICENSE/: index.html
api/: index.html
backends/: index.html
commands/: index.html
contribute/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/CHANGELOG/: index.html
dev/LICENSE/: index.html
dev/UPGRADE/: index.html
dev/api/: index.html
dev/commands/: index.html
dev/contribute/: index.html
dev/search/: search_index.json
docs/: api.md  backends.md  cli.md  commands.md  contribute.md  index.md
docs/api/: index.md
docs/backends/: index.md
docs/converters/: ServerEventToXapi.md
docs/features/: api.md  openapi.json
docs/models/: edx.md  index.md  xapi.md
docs/schemas/: BaseContextSchema.md  ServerEventSchema.md
docs/theme/: announce.html  main.html
docs/tutorials/: cli.md  development_contributing.md  development_guide.md  helm.md  library.md
gitlint/: gitlint_emoji.py
latest/: 404.html  index.html
latest/CHANGELOG/: index.html
latest/LICENSE/: index.html
latest/api/: index.html
latest/backends/: index.html
latest/commands/: index.html
latest/contribute/: index.html
latest/models/: index.html
master/: 404.html  index.html  objects.inv  sitemap.xml
master/CHANGELOG/: index.html
master/LICENSE/: index.html
master/UPGRADE/: index.html
master/api/: index.html
master/backends/: index.html
master/commands/: index.html
master/contribute/: index.html
master/css/: mkdocsoad.css
master/models/: index.html
master/search/: search_index.json
models/: index.html
models/edx/: index.html
models/xapi/: index.html
scripts/: generate_docs.py
search/: search_index.json
src/helm/: CHANGELOG.md  README.md  development.yaml
src/ralph/: __init__.py  __main__.py  cli.py  conf.py  defaults.py  exceptions.py  filters.py  logger.py  parsers.py  settings.py  transformers.py  utils.py
src/ralph/backends/plugins/fs/: pyproject.toml
src/ralph/backends/plugins/fs/source/: __init__.py  fs.py
src/ralph/backends/plugins/fs/tests/: test_fs.py
src/swarm/: README.md  docker-compose.prod.yml
src/tray/: tray.yml
tests/: conftest.py  factories.py  helpers.py  test_auth.py  test_cli.py  test_cli_list_usage.py  test_cli_read_usage.py  test_cli_runserver_usage.py  test_cli_usage.py  test_cli_write_usage.py  test_conf.py  test_defaults.py  test_dependencies.py  test_event_base.py  test_event_browser.py  test_event_feedback_displayed.py  test_event_fixture.py  test_event_server.py  test_filters.py  test_helpers.py  test_logger.py  test_parsers.py  test_utils.py
tests/api/: conftest.py  test_auth.py  test_cors.py  test_forwarding.py  test_health.py  test_middlewares.py  test_models.py  test_partial_success.py  (+8 more)
tutorial/: index.md  installation.md
(+529 files in other folders)
