#
# Ralph package
#
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-malph"
description = "Ralph, the ultimate Learning Record Store (and more!) for your learning analytics."
readme = "README.md"
authors = [
    { "name" = "Open FUN (France Université Numérique)", "email" = "fun.dev@fun-mooc.fr" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.9"
license = { file = "LICENSE.md" }
keywords = ["LRS", "Analytics", "xAPI", "Open edX"]
dependencies = [
    # By default, we only consider core dependencies required to use Ralph as a
    # library (mostly models).
    "importlib-metadata>=9, <9.1",
    "langcodes>=3.2.0",
    "pydantic[email]>=2.5.3,<3.0",
    "pydantic_settings>=2.1.0,<3.0",
    "rfc3987>=1.3.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://openfun.github.io/ralph/"
"Bug Tracker" = "https://github.com/openfun/ralph/issues"
"Changelog" = "https://github.com/openfun/ralph/blob/main/CHANGELOG.md"
"Repository" = "https://github.com/openfun/ralph"

[project.optional-dependencies]
backend-clickhouse = [
    "clickhouse-connect<0.8",
    "python-dateutil>=2.8.2",
]
backend-es = [
    "elasticsearch[async]>=9.4.1,<9.5.0",
]
backend-ldp = [
    "ovh==1.2.0",
    "requests>=2.0.0",
]
backend-lrs = [
    "httpx>=0.28.1",
]
backend-mongo = [
    "motor[srv]>=3.3.0",
    "pymongo[srv]>=4.0.0",
    "python-dateutil>=2.8.2",
]
backend-s3 = [
    "boto3>=1.24.70",
    "botocore>=1.27.71",
    "requests-toolbelt>=1.0.0",
]
backend-swift = [
    "python-keystoneclient>=5.0.0",
    "python-swiftclient>=4.0.0",
]
backend-ws = [
    "websockets>=16.1,<16.2",
]
backends = [
    "ralph-malph[backend-clickhouse,backend-es,backend-ldp,backend-lrs,backend-mongo,backend-s3,backend-swift,backend-ws]",
]
ci = [
    "twine==6.2.0",
]
cli = [
    "bcrypt>=4.0.0",
    "click>=8.4.2,<8.5.0", # until CliRunner is fixed (https://github.com/pallets/click/issues/2939)
    "click-option-group>=0.5.0",
    "sentry-sdk[fastapi]>=1.9.0",
]
dev = [
    "anyio==4.14.2",
    "black==26.5.1",
    "cryptography==49.0.0",
    "factory-boy==3.3.3",
    "logging-gelf==0.0.32",
    "mike==2.2.0",
    "mkdocs==1.6.1",
    "mkdocs-click==0.9.0",
    "mkdocs-material==9.7.7",
    "mkdocstrings[python-legacy]==1.0.6",
    "moto==5.2.2",
    "mypy==2.3.0",
    "neoteroi-mkdocs==1.2.0",
    "polyfactory==3.3.0",
    "pyfakefs==6.2.0",
    "pymdown-extensions==11.0.1",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-httpx==0.36.2",
    "requests-mock==1.12.1",
    "responses==0.26.2",
    "ruff==0.16.0",
    "types-python-dateutil ==2.9.0.20260716",
    "types-python-jose ==3.5.0.20260408",
    "types-requests<2.33.0.20260713",
    "types-cachetools ==7.0.0.20260713",
]
lrs = [
    "bcrypt==5.0.0",
    "fastapi==0.139.2",
    "cachetools==7.1.6",
    "httpx==0.28.1",
    "sentry_sdk==2.66.1",
    "python-jose==3.5.0",
    "uvicorn[standard]==0.51.0",
]
full = [
    "ralph-malph[backends,cli,lrs]",
]


[project.scripts]
ralph = "ralph.__main__:cli.cli"

[project.entry-points."ralph.backends.data"]
async_es = "ralph.backends.data.async_es:AsyncESDataBackend"
async_lrs = "ralph.backends.data.async_lrs:AsyncLRSDataBackend"
async_mongo = "ralph.backends.data.async_mongo:AsyncMongoDataBackend"
async_ws = "ralph.backends.data.async_ws:AsyncWSDataBackend"
clickhouse = "ralph.backends.data.clickhouse:ClickHouseDataBackend"
es = "ralph.backends.data.es:ESDataBackend"
fs = "ralph.backends.data.fs:FSDataBackend"
ldp = "ralph.backends.data.ldp:LDPDataBackend"
lrs = "ralph.backends.data.lrs:LRSDataBackend"
mongo = "ralph.backends.data.mongo:MongoDataBackend"
s3 = "ralph.backends.data.s3:S3DataBackend"
swift = "ralph.backends.data.swift:SwiftDataBackend"

[project.entry-points."ralph.backends.lrs"]
async_es = "ralph.backends.lrs.async_es:AsyncESLRSBackend"
async_mongo = "ralph.backends.lrs.async_mongo:AsyncMongoLRSBackend"
clickhouse = "ralph.backends.lrs.clickhouse:ClickHouseLRSBackend"
es = "ralph.backends.lrs.es:ESLRSBackend"
fs = "ralph.backends.lrs.fs:FSLRSBackend"
mongo = "ralph.backends.lrs.mongo:MongoLRSBackend"

[tool.setuptools]
packages = { find = { where = ["src"] } }
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "ralph.__version__" }

[tool.distutils.bdist_wheel]
universal = true

#
# Third-party packages configuration
#
[tool.ruff]
exclude = [
    ".conda",
    ".git",
    ".venv",
    "build",
    "scripts",
    "venv",
    "__pycache__",
    "node_modules",
    "*/migrations/*",
]
line-length = 88

[tool.ruff.lint]
select = [
    "ARG",  # flake8-unused-arguments
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "FIX",  # flake8-fixme
    "I",  # isort
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "SLF",  # flake8-self
    "T20",  # flake8-print
    "W",  # pycodestyle warning
]
ignore = [
    "B008",  # function-call-in-default-argument
    "N806",  # non-lowercase-variable-in-function
    "N815",  # mixed-case-variable-in-class-scope
    "N818",  # error-suffix-on-exception-name
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "ralph", "first-party", "local-folder"]
[tool.ruff.lint.isort.sections]
ralph = ["ralph"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG",  # flake8-unused-arguments
    "D",  # pydocstyle
    "S",  # flake8-bandit
    "SLF",  # flake8-self
    "PLR2004",  # Pylint magic-value-comparison
]
"setup.py" = [
    "D" # Pydocstyle rules
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = "src/ralph/**/*.py"
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = [
    "rfc3987.*",
    "requests_toolbelt.*",
    "botocore.*",
    "boto3.*",
    "clickhouse_connect.*",
    "ovh.*",
    "swiftclient.service.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = "-v --cov-report term-missing --cov-config=.coveragerc --cov=ralph"
python_files = [
    "test_*.py",
    "tests.py",
]
testpaths = "tests"
