;;
;; Ralph package
;;
[metadata]
name = ralph-malph
version = 3.9.0
description = The ultimate toolbox for your learning analytics
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://openfun.github.io/ralph/
license = MIT
keywords = Open edX, Analytics, xAPI, LRS
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires =
    ; By default, we only consider core dependencies required to use Ralph as a
    ; library (mostly models).
    langcodes>=3.2.0
    pydantic[dotenv,email]>=1.10.0, <2.0
    rfc3987>=1.3.0
package_dir =
    =src
packages = find:
zip_safe = True
python_requires = >= 3.7

[options.extras_require]
backend-clickhouse =
    clickhouse-connect[numpy,pandas]<0.6
    python-dateutil>=2.8.2
backend-es =
    elasticsearch[async]>=8.0.0
backend-ldp =
    ovh>=1.0.0
    requests>=2.0.0
backend-lrs =
    httpx<0.25.0 # pin as Python 3.7 is no longer supported from release 0.25.0
    more-itertools==10.1.0
backend-mongo =
    motor[srv]>=3.1.1
    pymongo[srv]>=4.0.0
    python-dateutil>=2.8.2
backend-s3 =
    boto3>=1.24.70
    botocore>=1.27.71
    requests-toolbelt>=1.0.0
backend-swift =
    python-keystoneclient>=5.0.0
    python-swiftclient>=4.0.0
backend-ws =
    websockets>=10.3
cli =
    bcrypt>=4.0.0
    click>=8.1.0
    click-option-group>=0.5.0
    sentry-sdk[fastapi]>=1.9.0
dev =
    anyio<4.0.1 # unpin until fastapi supports new major version of anyio
    bandit==1.7.5
    black==23.9.1
    cryptography==41.0.4
    factory-boy==3.3.0
    flake8==6.1.0
    hypothesis==6.87.1
    isort==5.12.0
    logging-gelf==0.0.31
    mkdocs==1.5.3
    mkdocs-click==0.8.1
    mkdocs-material==9.4.2
    mkdocstrings[python-legacy]==0.23.0
    moto==4.2.5
    pydocstyle==6.3.0
    pyfakefs==5.2.4
    pylint==2.17.7
    pytest==7.4.2
    pytest-asyncio==0.21.1
    pytest-cov==4.1.0
    pytest-httpx<0.23.0 # pin as Python 3.7 and 3.8 is no longer supported from release 0.23.0
    requests-mock==1.11.0
    responses<0.23.2 # pin until boto3 supports urllib3>=2
ci =
    twine==4.0.2
lrs =
    bcrypt==4.0.1
    fastapi==0.103.2
    cachetools==5.3.1
    ; We temporary pin `h11` to avoid pip downloading the latest version to solve a
    ; dependency conflict caused by `httpx` which requires httpcore>=0.15.0,<0.16.0 and
    ; `httpcore` depends on h11>=0.11,<0.13.
    ; See: https://github.com/encode/httpx/issues/2244
    h11>=0.11.0
    httpx<0.25.0 # pin as Python 3.7 is no longer supported from release 0.25.0
    sentry_sdk==1.31.0
    python-jose==3.3.0
    uvicorn[standard]==0.23.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  ralph = ralph.__main__:cli.cli

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .conda,
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[pydocstyle]
convention = google
match_dir = ^(?!tests|venv|build|scripts).*
match = ^(?!(setup)\.(py)$).*\.(py)$

[isort]
known_ralph=ralph
sections=FUTURE,STDLIB,THIRDPARTY,RALPH,FIRSTPARTY,LOCALFOLDER
skip_glob=venv
profile=black

[tool:pytest]
addopts = -v --cov-report term-missing --cov-config=.coveragerc --cov=ralph
python_files =
    test_*.py
    tests.py
testpaths =
    tests
